mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_undefined_type_map_new.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: Undefined variable 'map'
--> test_scripts/error_cases/semantic_undefined_type_map_new.mux:2:18
   |
 2 | auto empty_map = map.new()
   |                  ^^^
   |
= help: Map has no '.new()' constructor. Use '{}' for an empty map or '{"key": "value"}' for entries. For example: map<string, int> = {}
